// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component Send - test Send currency USD, privacy high & mode advanced - snapshot 1`] = `
<View
  accessibilityLabel="text translated"
  accessible={true}
  style={
    {
      "display": "flex",
      "height": "100%",
      "justifyContent": "flex-start",
      "marginBottom": 200,
      "width": "100%",
    }
  }
>
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    transparent={false}
    visible={false}
  />
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    transparent={false}
    visible={false}
  />
  <RCTScrollView
    contentContainerStyle={{}}
    keyboardShouldPersistTaps="handled"
    testID="send.scroll-view"
  >
    <View>
      <View
        style={
          {
            "marginBottom": 30,
          }
        }
      >
        <View
          style={
            {
              "display": "flex",
              "marginTop": 10,
              "padding": 10,
            }
          }
        >
          <View
            style={
              {
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <View
              style={
                {
                  "display": "flex",
                  "flexDirection": "row",
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#c3c3c3",
                    "fontSize": 18,
                    "fontWeight": "600",
                    "marginRight": 10,
                    "opacity": 1,
                  }
                }
              >
                text translated
              </Text>
            </View>
          </View>
          <View
            style={
              {
                "borderColor": "#c3c3c3",
                "borderRadius": 5,
                "borderWidth": 1,
                "flex": 1,
                "marginTop": 5,
              }
            }
          >
            <View
              style={
                {
                  "flexDirection": "row",
                }
              }
            >
              <View
                accessibilityLabel="text translated"
                accessible={true}
                style={
                  {
                    "flex": 1,
                    "justifyContent": "center",
                  }
                }
              >
                <TextInput
                  editable={true}
                  onChangeText={[Function]}
                  placeholder="text translated"
                  placeholderTextColor="#888888"
                  style={
                    {
                      "backgroundColor": "transparent",
                      "color": "#c3c3c3",
                      "fontSize": 14,
                      "fontWeight": "600",
                      "marginLeft": 5,
                    }
                  }
                  testID="send.addressplaceholder"
                  value="UA-12345678901234567890"
                />
              </View>
              <View
                style={
                  {
                    "alignItems": "center",
                    "display": "flex",
                    "flexDirection": "row",
                    "justifyContent": "center",
                  }
                }
              >
                <View
                  accessibilityLabel="text translated"
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    {
                      "opacity": 1,
                    }
                  }
                  testID="send.scan-button"
                >
                  <
                    color="#ffffff"
                    icon={
                      {
                        "icon": [
                          448,
                          512,
                          [],
                          "f029",
                          "M0 80C0 53.5 21.5 32 48 32h96c26.5 0 48 21.5 48 48v96c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V80zM64 96v64h64V96H64zM0 336c0-26.5 21.5-48 48-48h96c26.5 0 48 21.5 48 48v96c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V336zm64 16v64h64V352H64zM304 32h96c26.5 0 48 21.5 48 48v96c0 26.5-21.5 48-48 48H304c-26.5 0-48-21.5-48-48V80c0-26.5 21.5-48 48-48zm80 64H320v64h64V96zM256 304c0-8.8 7.2-16 16-16h64c8.8 0 16 7.2 16 16s7.2 16 16 16h32c8.8 0 16-7.2 16-16s7.2-16 16-16s16 7.2 16 16v96c0 8.8-7.2 16-16 16H368c-8.8 0-16-7.2-16-16s-7.2-16-16-16s-16 7.2-16 16v64c0 8.8-7.2 16-16 16H272c-8.8 0-16-7.2-16-16V304zM368 480a16 16 0 1 1 0-32 16 16 0 1 1 0 32zm64 0a16 16 0 1 1 0-32 16 16 0 1 1 0 32z",
                        ],
                        "iconName": "qrcode",
                        "prefix": "fas",
                      }
                    }
                    size={35}
                    style={
                      {
                        "marginRight": 5,
                      }
                    }
                  />
                </View>
              </View>
            </View>
          </View>
          <View
            style={
              {
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginTop": 10,
              }
            }
          >
            <View
              style={
                {
                  "flexDirection": "row",
                  "justifyContent": "flex-end",
                  "minHeight": 48,
                  "minWidth": 48,
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "borderRadius": 10,
                    "justifyContent": "flex-end",
                    "margin": 0,
                    "minHeight": 48,
                    "minWidth": 48,
                    "padding": 0,
                    "paddingBottom": 3,
                  }
                }
              >
                <Text
                  style={
                    {
                      "color": "#c3c3c3",
                      "opacity": 0.65,
                    }
                  }
                >
                  text translated
                </Text>
              </View>
            </View>
            <Text
              style={
                {
                  "color": "#18bd18",
                }
              }
            >
              text translated
            </Text>
          </View>
          <View
            style={
              {
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <View
              style={
                {
                  "display": "flex",
                  "flexDirection": "column",
                  "justifyContent": "flex-start",
                  "width": "60%",
                }
              }
            >
              <View
                style={
                  {
                    "display": "flex",
                    "flexDirection": "row",
                    "justifyContent": "flex-start",
                  }
                }
              >
                <Text
                  style={
                    {
                      "color": "#c3c3c3",
                      "fontSize": 20,
                      "fontWeight": "600",
                      "marginRight": 5,
                      "marginTop": 22,
                      "opacity": 1,
                      "transform": [
                        {
                          "scaleY": 1.5,
                        },
                      ],
                    }
                  }
                >
                  ᙇ
                </Text>
                <View
                  accessibilityLabel="text translated"
                  accessible={true}
                  style={
                    {
                      "borderColor": "#c3c3c3",
                      "borderRadius": 5,
                      "borderWidth": 1,
                      "flexGrow": 1,
                      "marginTop": 5,
                      "minHeight": 48,
                      "minWidth": 48,
                      "width": "75%",
                    }
                  }
                >
                  <TextInput
                    editable={true}
                    keyboardType="numeric"
                    maxLength={20}
                    onChangeText={[Function]}
                    onEndEditing={[Function]}
                    placeholder="#.########"
                    placeholderTextColor="#888888"
                    style={
                      {
                        "backgroundColor": "transparent",
                        "color": "#c3c3c3",
                        "fontSize": 16,
                        "fontWeight": "600",
                        "marginLeft": 5,
                        "minHeight": 48,
                        "minWidth": 48,
                      }
                    }
                    testID="send.amount"
                    value="1.12345678"
                  />
                </View>
              </View>
              <View
                style={
                  {
                    "display": "flex",
                    "flexDirection": "column",
                  }
                }
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "display": "flex",
                      "flexDirection": "row",
                      "justifyContent": "flex-start",
                      "marginTop": 5,
                    }
                  }
                >
                  <Text
                    style={
                      {
                        "color": "#c3c3c3",
                        "fontSize": 14,
                        "fontWeight": "600",
                        "opacity": 1,
                      }
                    }
                  >
                    text translated
                  </Text>
                  <View
                    style={
                      {
                        "flexDirection": "row",
                        "margin": 5,
                      }
                    }
                  >
                    <View
                      accessibilityState={
                        {
                          "disabled": false,
                        }
                      }
                      accessible={true}
                      collapsable={false}
                      focusable={true}
                      onClick={[Function]}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        {
                          "opacity": 1,
                        }
                      }
                    >
                      <View
                        style={
                          {
                            "alignItems": "flex-end",
                            "flexDirection": "row",
                            "margin": 0,
                            "padding": 0,
                          }
                        }
                      >
                        <RNSVGSvgView
                          align="xMidYMid"
                          bbHeight="15"
                          bbWidth="30"
                          fill="red"
                          focusable={false}
                          height={15}
                          meetOrSlice={0}
                          minX={0}
                          minY={0}
                          style={
                            [
                              {
                                "backgroundColor": "transparent",
                                "borderWidth": 0,
                              },
                              {
                                "marginBottom": 0.75,
                              },
                              {
                                "flex": 0,
                                "height": 15,
                                "width": 30,
                              },
                            ]
                          }
                          vbHeight={147.85}
                          vbWidth={282.84}
                          width={30}
                          xml="<?xml version="1.0" encoding="UTF-8"?>
  <svg viewBox="0 0 282.84 147.85">
    <polygon points="34.44 107.62 34.44 106.98 87.19 34.17 87.19 20.12 56.09 20.12 56.09 0 35.98 0 35.98 20.12 5.04 20.12 5.04 40.24 53.93 40.24 53.93 40.88 0 114.64 0 127.73 35.98 127.73 35.98 147.85 56.09 147.85 56.09 127.73 88.03 127.73 88.03 107.62 34.44 107.62"/>
    <polygon points="180.89 39.03 180.89 19.35 124.56 19.35 110.48 19.35 102.52 19.35 102.52 127.75 110.48 127.75 124.56 127.75 180.89 127.75 180.89 108.07 124.56 108.07 124.56 83.77 172.04 83.77 172.04 64.09 124.56 64.09 124.56 39.03 180.89 39.03"/>
    <path d="m240.92,128.87c-8.96,0-16.59-1.58-22.89-4.73-6.3-3.16-11.12-7.75-14.44-13.79-3.33-6.04-4.99-13.33-4.99-21.88v-29.75c0-8.6,1.66-15.9,4.99-21.92,3.33-6.01,8.14-10.61,14.44-13.79,6.3-3.18,13.93-4.77,22.89-4.77,7.4,0,13.99,1.47,19.75,4.4,5.77,2.93,10.54,7.18,14.32,12.75,3.78,5.57,6.4,12.33,7.85,20.28h-22.85c-.86-3.63-2.19-6.7-3.98-9.21-1.8-2.51-3.97-4.44-6.52-5.78-2.55-1.34-5.41-2.01-8.57-2.01-6.17,0-10.96,1.75-14.36,5.26-3.41,3.5-5.11,8.44-5.11,14.8v29.75c0,6.36,1.7,11.28,5.11,14.76,3.41,3.48,8.19,5.22,14.36,5.22,4.83,0,8.9-1.48,12.23-4.44,3.33-2.96,5.61-7.14,6.84-12.56h22.85c-1.5,7.9-4.14,14.65-7.93,20.24-3.78,5.59-8.54,9.85-14.28,12.79-5.74,2.93-12.31,4.4-19.71,4.4Z"/>
  </svg>"
                        >
                          <RNSVGGroup
                            fill={
                              {
                                "payload": 4294901760,
                                "type": 0,
                              }
                            }
                            propList={
                              [
                                "fill",
                              ]
                            }
                          >
                            <RNSVGPath
                              d="M34.44 107.62 34.44 106.98 87.19 34.17 87.19 20.12 56.09 20.12 56.09 0 35.98 0 35.98 20.12 5.04 20.12 5.04 40.24 53.93 40.24 53.93 40.88 0 114.64 0 127.73 35.98 127.73 35.98 147.85 56.09 147.85 56.09 127.73 88.03 127.73 88.03 107.62 34.44 107.62z"
                              fill={
                                {
                                  "payload": 4278190080,
                                  "type": 0,
                                }
                              }
                            />
                            <RNSVGPath
                              d="M180.89 39.03 180.89 19.35 124.56 19.35 110.48 19.35 102.52 19.35 102.52 127.75 110.48 127.75 124.56 127.75 180.89 127.75 180.89 108.07 124.56 108.07 124.56 83.77 172.04 83.77 172.04 64.09 124.56 64.09 124.56 39.03 180.89 39.03z"
                              fill={
                                {
                                  "payload": 4278190080,
                                  "type": 0,
                                }
                              }
                            />
                            <RNSVGPath
                              d="m240.92,128.87c-8.96,0-16.59-1.58-22.89-4.73-6.3-3.16-11.12-7.75-14.44-13.79-3.33-6.04-4.99-13.33-4.99-21.88v-29.75c0-8.6,1.66-15.9,4.99-21.92,3.33-6.01,8.14-10.61,14.44-13.79,6.3-3.18,13.93-4.77,22.89-4.77,7.4,0,13.99,1.47,19.75,4.4,5.77,2.93,10.54,7.18,14.32,12.75,3.78,5.57,6.4,12.33,7.85,20.28h-22.85c-.86-3.63-2.19-6.7-3.98-9.21-1.8-2.51-3.97-4.44-6.52-5.78-2.55-1.34-5.41-2.01-8.57-2.01-6.17,0-10.96,1.75-14.36,5.26-3.41,3.5-5.11,8.44-5.11,14.8v29.75c0,6.36,1.7,11.28,5.11,14.76,3.41,3.48,8.19,5.22,14.36,5.22,4.83,0,8.9-1.48,12.23-4.44,3.33-2.96,5.61-7.14,6.84-12.56h22.85c-1.5,7.9-4.14,14.65-7.93,20.24-3.78,5.59-8.54,9.85-14.28,12.79-5.74,2.93-12.31,4.4-19.71,4.4Z"
                              fill={
                                {
                                  "payload": 4278190080,
                                  "type": 0,
                                }
                              }
                            />
                          </RNSVGGroup>
                        </RNSVGSvgView>
                        <Text
                          style={
                            {
                              "color": "red",
                              "fontSize": 15,
                              "fontWeight": "700",
                              "margin": 0,
                              "padding": 0,
                            }
                          }
                        >
                           -.----
                        </Text>
                      </View>
                    </View>
                  </View>
                </View>
                <View
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    {
                      "opacity": 1,
                    }
                  }
                >
                  <View
                    style={
                      {
                        "backgroundColor": "#011401",
                        "borderRadius": 10,
                        "display": "flex",
                        "flexDirection": "row",
                        "marginTop": 5,
                        "padding": 5,
                      }
                    }
                  >
                    <
                      color="#18bd18"
                      icon={
                        {
                          "icon": [
                            512,
                            512,
                            [
                              "info-circle",
                            ],
                            "f05a",
                            "M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM216 336h24V272H216c-13.3 0-24-10.7-24-24s10.7-24 24-24h48c13.3 0 24 10.7 24 24v88h8c13.3 0 24 10.7 24 24s-10.7 24-24 24H216c-13.3 0-24-10.7-24-24s10.7-24 24-24zm40-208a32 32 0 1 1 0 64 32 32 0 1 1 0-64z",
                          ],
                          "iconName": "circle-info",
                          "prefix": "fas",
                        }
                      }
                      size={20}
                      style={
                        {
                          "marginRight": 5,
                        }
                      }
                    />
                    <Text
                      style={
                        {
                          "color": "#c3c3c3",
                          "opacity": 0.65,
                        }
                      }
                    >
                      text translated
                    </Text>
                  </View>
                </View>
              </View>
            </View>
            <View
              style={
                {
                  "display": "flex",
                  "flexDirection": "column",
                  "justifyContent": "flex-start",
                  "width": "35%",
                }
              }
            >
              <View
                style={
                  {
                    "display": "flex",
                    "flexDirection": "row",
                    "justifyContent": "flex-start",
                  }
                }
              >
                <Text
                  style={
                    {
                      "color": "#c3c3c3",
                      "fontSize": 18,
                      "fontWeight": "600",
                      "marginRight": 5,
                      "marginTop": 17,
                      "opacity": 1,
                    }
                  }
                >
                  $
                </Text>
                <View
                  accessibilityLabel="text translated"
                  accessible={true}
                  style={
                    {
                      "borderColor": "#c3c3c3",
                      "borderRadius": 5,
                      "borderWidth": 1,
                      "flexGrow": 1,
                      "marginTop": 5,
                      "minHeight": 48,
                      "minWidth": 48,
                      "width": "55%",
                    }
                  }
                >
                  <TextInput
                    editable={true}
                    keyboardType="numeric"
                    maxLength={15}
                    onChangeText={[Function]}
                    onEndEditing={[Function]}
                    placeholder="#.##"
                    placeholderTextColor="#888888"
                    style={
                      {
                        "backgroundColor": "transparent",
                        "color": "#c3c3c3",
                        "fontSize": 16,
                        "fontWeight": "600",
                        "marginLeft": 5,
                        "minHeight": 48,
                        "minWidth": 48,
                      }
                    }
                    value="50.22"
                  />
                </View>
              </View>
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "column",
                  }
                }
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                    }
                  }
                >
                  <Text
                    style={
                      {
                        "color": "#c3c3c3",
                        "fontSize": 12.5,
                        "fontWeight": "600",
                        "marginTop": 11,
                        "opacity": 1,
                      }
                    }
                  >
                    text translated
                  </Text>
                  <View
                    style={
                      {
                        "alignItems": "baseline",
                        "flexDirection": "row",
                      }
                    }
                  >
                    <View
                      accessibilityState={
                        {
                          "disabled": false,
                        }
                      }
                      accessible={true}
                      collapsable={false}
                      focusable={true}
                      onClick={[Function]}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        {
                          "opacity": 1,
                        }
                      }
                    >
                      <View
                        style={
                          {
                            "alignItems": "baseline",
                            "flexDirection": "row",
                          }
                        }
                      >
                        <Text
                          style={
                            {
                              "color": "#ffffff",
                              "fontSize": 12.5,
                              "marginTop": 11,
                            }
                          }
                        >
                          $
                        </Text>
                        <Text
                          style={
                            {
                              "color": "#ffffff",
                              "fontSize": 12.5,
                              "fontWeight": "700",
                              "marginTop": 11,
                            }
                          }
                        >
                           -.--
                        </Text>
                      </View>
                    </View>
                  </View>
                </View>
                <View
                  style={
                    {
                      "marginLeft": 5,
                    }
                  }
                >
                  <View
                    accessibilityState={
                      {
                        "disabled": false,
                      }
                    }
                    accessible={true}
                    collapsable={false}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      {
                        "opacity": 1,
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "alignItems": "center",
                          "backgroundColor": "#011401",
                          "borderRadius": 10,
                          "flexDirection": "row",
                          "justifyContent": "center",
                          "margin": 0,
                          "minHeight": 40,
                          "minWidth": 40,
                          "padding": 5,
                        }
                      }
                    >
                      <
                        color="#18bd18"
                        icon={
                          {
                            "icon": [
                              512,
                              512,
                              [
                                128472,
                                "refresh",
                                "sync",
                              ],
                              "f021",
                              "M105.1 202.6c7.7-21.8 20.2-42.3 37.8-59.8c62.5-62.5 163.8-62.5 226.3 0L386.3 160H352c-17.7 0-32 14.3-32 32s14.3 32 32 32H463.5c0 0 0 0 0 0h.4c17.7 0 32-14.3 32-32V80c0-17.7-14.3-32-32-32s-32 14.3-32 32v35.2L414.4 97.6c-87.5-87.5-229.3-87.5-316.8 0C73.2 122 55.6 150.7 44.8 181.4c-5.9 16.7 2.9 34.9 19.5 40.8s34.9-2.9 40.8-19.5zM39 289.3c-5 1.5-9.8 4.2-13.7 8.2c-4 4-6.7 8.8-8.1 14c-.3 1.2-.6 2.5-.8 3.8c-.3 1.7-.4 3.4-.4 5.1V432c0 17.7 14.3 32 32 32s32-14.3 32-32V396.9l17.6 17.5 0 0c87.5 87.4 229.3 87.4 316.7 0c24.4-24.4 42.1-53.1 52.9-83.7c5.9-16.7-2.9-34.9-19.5-40.8s-34.9 2.9-40.8 19.5c-7.7 21.8-20.2 42.3-37.8 59.8c-62.5 62.5-163.8 62.5-226.3 0l-.1-.1L125.6 352H160c17.7 0 32-14.3 32-32s-14.3-32-32-32H48.4c-1.6 0-3.2 .1-4.8 .3s-3.1 .5-4.6 1z",
                            ],
                            "iconName": "arrows-rotate",
                            "prefix": "fas",
                          }
                        }
                        size={20}
                      />
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "flexGrow": 1,
              "justifyContent": "center",
              "marginVertical": 5,
            }
          }
        >
          <View
            accessibilityLabel="title text translated"
            accessibilityState={
              {
                "disabled": true,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#5a8c5a",
                "borderColor": "#5a8c5a",
                "borderRadius": 10,
                "borderWidth": 2,
                "justifyContent": "center",
                "maxWidth": "90%",
                "minHeight": 48,
                "minWidth": "30%",
                "opacity": 1,
                "padding": 0,
                "paddingLeft": 20,
                "paddingRight": 20,
              }
            }
            testID="send.button"
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "display": "flex",
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "margin": 0,
                  "minHeight": 48,
                  "minWidth": 48,
                  "padding": 0,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#011401",
                    "fontSize": 16,
                    "fontWeight": "bold",
                    "textAlign": "center",
                    "textTransform": "uppercase",
                  }
                }
              >
                text translated
              </Text>
            </View>
          </View>
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#011401",
                "borderColor": "#18bd18",
                "borderRadius": 10,
                "borderWidth": 2,
                "justifyContent": "center",
                "marginLeft": 10,
                "maxWidth": "90%",
                "minHeight": 48,
                "minWidth": "30%",
                "opacity": 1,
                "padding": 0,
                "paddingLeft": 20,
                "paddingRight": 20,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "display": "flex",
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "margin": 0,
                  "minHeight": 48,
                  "minWidth": 48,
                  "padding": 0,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#18bd18",
                    "fontSize": 16,
                    "fontWeight": "bold",
                    "textAlign": "center",
                    "textTransform": "uppercase",
                  }
                }
              >
                text translated
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`Component Send - test Send no currency, privacy normal & mode basic - snapshot 1`] = `
<View
  accessibilityLabel="text translated"
  accessible={true}
  style={
    {
      "display": "flex",
      "height": "100%",
      "justifyContent": "flex-start",
      "marginBottom": 200,
      "width": "100%",
    }
  }
>
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    transparent={false}
    visible={false}
  />
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    transparent={false}
    visible={false}
  />
  <RCTScrollView
    contentContainerStyle={{}}
    keyboardShouldPersistTaps="handled"
    testID="send.scroll-view"
  >
    <View>
      <View
        style={
          {
            "marginBottom": 30,
          }
        }
      >
        <View
          style={
            {
              "display": "flex",
              "marginTop": 10,
              "padding": 10,
            }
          }
        >
          <View
            style={
              {
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <View
              style={
                {
                  "display": "flex",
                  "flexDirection": "row",
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#c3c3c3",
                    "fontSize": 18,
                    "fontWeight": "600",
                    "marginRight": 10,
                    "opacity": 1,
                  }
                }
              >
                text translated
              </Text>
            </View>
          </View>
          <View
            style={
              {
                "borderColor": "#c3c3c3",
                "borderRadius": 5,
                "borderWidth": 1,
                "flex": 1,
                "marginTop": 5,
              }
            }
          >
            <View
              style={
                {
                  "flexDirection": "row",
                }
              }
            >
              <View
                accessibilityLabel="text translated"
                accessible={true}
                style={
                  {
                    "flex": 1,
                    "justifyContent": "center",
                  }
                }
              >
                <TextInput
                  editable={true}
                  onChangeText={[Function]}
                  placeholder="text translated"
                  placeholderTextColor="#888888"
                  style={
                    {
                      "backgroundColor": "transparent",
                      "color": "#c3c3c3",
                      "fontSize": 14,
                      "fontWeight": "600",
                      "marginLeft": 5,
                    }
                  }
                  testID="send.addressplaceholder"
                  value="UA-12345678901234567890"
                />
              </View>
              <View
                style={
                  {
                    "alignItems": "center",
                    "display": "flex",
                    "flexDirection": "row",
                    "justifyContent": "center",
                  }
                }
              >
                <View
                  accessibilityLabel="text translated"
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    {
                      "opacity": 1,
                    }
                  }
                  testID="send.scan-button"
                >
                  <
                    color="#ffffff"
                    icon={
                      {
                        "icon": [
                          448,
                          512,
                          [],
                          "f029",
                          "M0 80C0 53.5 21.5 32 48 32h96c26.5 0 48 21.5 48 48v96c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V80zM64 96v64h64V96H64zM0 336c0-26.5 21.5-48 48-48h96c26.5 0 48 21.5 48 48v96c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V336zm64 16v64h64V352H64zM304 32h96c26.5 0 48 21.5 48 48v96c0 26.5-21.5 48-48 48H304c-26.5 0-48-21.5-48-48V80c0-26.5 21.5-48 48-48zm80 64H320v64h64V96zM256 304c0-8.8 7.2-16 16-16h64c8.8 0 16 7.2 16 16s7.2 16 16 16h32c8.8 0 16-7.2 16-16s7.2-16 16-16s16 7.2 16 16v96c0 8.8-7.2 16-16 16H368c-8.8 0-16-7.2-16-16s-7.2-16-16-16s-16 7.2-16 16v64c0 8.8-7.2 16-16 16H272c-8.8 0-16-7.2-16-16V304zM368 480a16 16 0 1 1 0-32 16 16 0 1 1 0 32zm64 0a16 16 0 1 1 0-32 16 16 0 1 1 0 32z",
                        ],
                        "iconName": "qrcode",
                        "prefix": "fas",
                      }
                    }
                    size={35}
                    style={
                      {
                        "marginRight": 5,
                      }
                    }
                  />
                </View>
              </View>
            </View>
          </View>
          <View
            style={
              {
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginTop": 10,
              }
            }
          >
            <View
              style={
                {
                  "flexDirection": "row",
                  "justifyContent": "flex-end",
                  "minHeight": 48,
                  "minWidth": 48,
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "borderRadius": 10,
                    "justifyContent": "flex-end",
                    "margin": 0,
                    "minHeight": 48,
                    "minWidth": 48,
                    "padding": 0,
                    "paddingBottom": 3,
                  }
                }
              >
                <Text
                  style={
                    {
                      "color": "#c3c3c3",
                      "opacity": 0.65,
                    }
                  }
                >
                  text translated
                </Text>
              </View>
            </View>
            <Text
              style={
                {
                  "color": "#18bd18",
                }
              }
            >
              text translated
            </Text>
          </View>
          <View
            style={
              {
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <View
              style={
                {
                  "display": "flex",
                  "flexDirection": "column",
                  "justifyContent": "flex-start",
                  "width": "60%",
                }
              }
            >
              <View
                style={
                  {
                    "display": "flex",
                    "flexDirection": "row",
                    "justifyContent": "flex-start",
                  }
                }
              >
                <Text
                  style={
                    {
                      "color": "#c3c3c3",
                      "fontSize": 20,
                      "fontWeight": "600",
                      "marginRight": 5,
                      "marginTop": 22,
                      "opacity": 1,
                      "transform": [
                        {
                          "scaleY": 1.5,
                        },
                      ],
                    }
                  }
                >
                  ᙇ
                </Text>
                <View
                  accessibilityLabel="text translated"
                  accessible={true}
                  style={
                    {
                      "borderColor": "#c3c3c3",
                      "borderRadius": 5,
                      "borderWidth": 1,
                      "flexGrow": 1,
                      "marginTop": 5,
                      "minHeight": 48,
                      "minWidth": 48,
                      "width": "75%",
                    }
                  }
                >
                  <TextInput
                    editable={true}
                    keyboardType="numeric"
                    maxLength={20}
                    onChangeText={[Function]}
                    onEndEditing={[Function]}
                    placeholder="#.########"
                    placeholderTextColor="#888888"
                    style={
                      {
                        "backgroundColor": "transparent",
                        "color": "#c3c3c3",
                        "fontSize": 16,
                        "fontWeight": "600",
                        "marginLeft": 5,
                        "minHeight": 48,
                        "minWidth": 48,
                      }
                    }
                    testID="send.amount"
                    value="1.12345678"
                  />
                </View>
              </View>
              <View
                style={
                  {
                    "display": "flex",
                    "flexDirection": "column",
                  }
                }
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "display": "flex",
                      "flexDirection": "row",
                      "justifyContent": "flex-start",
                      "marginTop": 5,
                    }
                  }
                >
                  <Text
                    style={
                      {
                        "color": "#c3c3c3",
                        "fontSize": 14,
                        "fontWeight": "600",
                        "opacity": 1,
                      }
                    }
                  >
                    text translated
                  </Text>
                  <View
                    style={
                      {
                        "flexDirection": "row",
                        "margin": 5,
                      }
                    }
                  >
                    <View
                      accessibilityState={
                        {
                          "disabled": true,
                        }
                      }
                      accessible={true}
                      collapsable={false}
                      focusable={true}
                      onClick={[Function]}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        {
                          "opacity": 1,
                        }
                      }
                    >
                      <View
                        style={
                          {
                            "alignItems": "flex-end",
                            "flexDirection": "row",
                            "margin": 0,
                            "padding": 0,
                          }
                        }
                      >
                        <RNSVGSvgView
                          align="xMidYMid"
                          bbHeight="15"
                          bbWidth="30"
                          fill="red"
                          focusable={false}
                          height={15}
                          meetOrSlice={0}
                          minX={0}
                          minY={0}
                          style={
                            [
                              {
                                "backgroundColor": "transparent",
                                "borderWidth": 0,
                              },
                              {
                                "marginBottom": 0.75,
                              },
                              {
                                "flex": 0,
                                "height": 15,
                                "width": 30,
                              },
                            ]
                          }
                          vbHeight={147.85}
                          vbWidth={282.84}
                          width={30}
                          xml="<?xml version="1.0" encoding="UTF-8"?>
  <svg viewBox="0 0 282.84 147.85">
    <polygon points="34.44 107.62 34.44 106.98 87.19 34.17 87.19 20.12 56.09 20.12 56.09 0 35.98 0 35.98 20.12 5.04 20.12 5.04 40.24 53.93 40.24 53.93 40.88 0 114.64 0 127.73 35.98 127.73 35.98 147.85 56.09 147.85 56.09 127.73 88.03 127.73 88.03 107.62 34.44 107.62"/>
    <polygon points="180.89 39.03 180.89 19.35 124.56 19.35 110.48 19.35 102.52 19.35 102.52 127.75 110.48 127.75 124.56 127.75 180.89 127.75 180.89 108.07 124.56 108.07 124.56 83.77 172.04 83.77 172.04 64.09 124.56 64.09 124.56 39.03 180.89 39.03"/>
    <path d="m240.92,128.87c-8.96,0-16.59-1.58-22.89-4.73-6.3-3.16-11.12-7.75-14.44-13.79-3.33-6.04-4.99-13.33-4.99-21.88v-29.75c0-8.6,1.66-15.9,4.99-21.92,3.33-6.01,8.14-10.61,14.44-13.79,6.3-3.18,13.93-4.77,22.89-4.77,7.4,0,13.99,1.47,19.75,4.4,5.77,2.93,10.54,7.18,14.32,12.75,3.78,5.57,6.4,12.33,7.85,20.28h-22.85c-.86-3.63-2.19-6.7-3.98-9.21-1.8-2.51-3.97-4.44-6.52-5.78-2.55-1.34-5.41-2.01-8.57-2.01-6.17,0-10.96,1.75-14.36,5.26-3.41,3.5-5.11,8.44-5.11,14.8v29.75c0,6.36,1.7,11.28,5.11,14.76,3.41,3.48,8.19,5.22,14.36,5.22,4.83,0,8.9-1.48,12.23-4.44,3.33-2.96,5.61-7.14,6.84-12.56h22.85c-1.5,7.9-4.14,14.65-7.93,20.24-3.78,5.59-8.54,9.85-14.28,12.79-5.74,2.93-12.31,4.4-19.71,4.4Z"/>
  </svg>"
                        >
                          <RNSVGGroup
                            fill={
                              {
                                "payload": 4294901760,
                                "type": 0,
                              }
                            }
                            propList={
                              [
                                "fill",
                              ]
                            }
                          >
                            <RNSVGPath
                              d="M34.44 107.62 34.44 106.98 87.19 34.17 87.19 20.12 56.09 20.12 56.09 0 35.98 0 35.98 20.12 5.04 20.12 5.04 40.24 53.93 40.24 53.93 40.88 0 114.64 0 127.73 35.98 127.73 35.98 147.85 56.09 147.85 56.09 127.73 88.03 127.73 88.03 107.62 34.44 107.62z"
                              fill={
                                {
                                  "payload": 4278190080,
                                  "type": 0,
                                }
                              }
                            />
                            <RNSVGPath
                              d="M180.89 39.03 180.89 19.35 124.56 19.35 110.48 19.35 102.52 19.35 102.52 127.75 110.48 127.75 124.56 127.75 180.89 127.75 180.89 108.07 124.56 108.07 124.56 83.77 172.04 83.77 172.04 64.09 124.56 64.09 124.56 39.03 180.89 39.03z"
                              fill={
                                {
                                  "payload": 4278190080,
                                  "type": 0,
                                }
                              }
                            />
                            <RNSVGPath
                              d="m240.92,128.87c-8.96,0-16.59-1.58-22.89-4.73-6.3-3.16-11.12-7.75-14.44-13.79-3.33-6.04-4.99-13.33-4.99-21.88v-29.75c0-8.6,1.66-15.9,4.99-21.92,3.33-6.01,8.14-10.61,14.44-13.79,6.3-3.18,13.93-4.77,22.89-4.77,7.4,0,13.99,1.47,19.75,4.4,5.77,2.93,10.54,7.18,14.32,12.75,3.78,5.57,6.4,12.33,7.85,20.28h-22.85c-.86-3.63-2.19-6.7-3.98-9.21-1.8-2.51-3.97-4.44-6.52-5.78-2.55-1.34-5.41-2.01-8.57-2.01-6.17,0-10.96,1.75-14.36,5.26-3.41,3.5-5.11,8.44-5.11,14.8v29.75c0,6.36,1.7,11.28,5.11,14.76,3.41,3.48,8.19,5.22,14.36,5.22,4.83,0,8.9-1.48,12.23-4.44,3.33-2.96,5.61-7.14,6.84-12.56h22.85c-1.5,7.9-4.14,14.65-7.93,20.24-3.78,5.59-8.54,9.85-14.28,12.79-5.74,2.93-12.31,4.4-19.71,4.4Z"
                              fill={
                                {
                                  "payload": 4278190080,
                                  "type": 0,
                                }
                              }
                            />
                          </RNSVGGroup>
                        </RNSVGSvgView>
                        <Text
                          style={
                            {
                              "color": "red",
                              "fontSize": 15,
                              "fontWeight": "700",
                              "margin": 0,
                              "padding": 0,
                            }
                          }
                          testID="undefined.big-part"
                        >
                           0.0000
                        </Text>
                      </View>
                    </View>
                  </View>
                </View>
                <View
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    {
                      "opacity": 1,
                    }
                  }
                >
                  <View
                    style={
                      {
                        "backgroundColor": "#011401",
                        "borderRadius": 10,
                        "display": "flex",
                        "flexDirection": "row",
                        "marginTop": 5,
                        "padding": 5,
                      }
                    }
                  >
                    <
                      color="#18bd18"
                      icon={
                        {
                          "icon": [
                            512,
                            512,
                            [
                              "info-circle",
                            ],
                            "f05a",
                            "M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM216 336h24V272H216c-13.3 0-24-10.7-24-24s10.7-24 24-24h48c13.3 0 24 10.7 24 24v88h8c13.3 0 24 10.7 24 24s-10.7 24-24 24H216c-13.3 0-24-10.7-24-24s10.7-24 24-24zm40-208a32 32 0 1 1 0 64 32 32 0 1 1 0-64z",
                          ],
                          "iconName": "circle-info",
                          "prefix": "fas",
                        }
                      }
                      size={20}
                      style={
                        {
                          "marginRight": 5,
                        }
                      }
                    />
                    <Text
                      style={
                        {
                          "color": "#c3c3c3",
                          "opacity": 0.65,
                        }
                      }
                    >
                      text translated
                    </Text>
                  </View>
                </View>
              </View>
            </View>
            <View
              style={
                {
                  "display": "flex",
                  "flexDirection": "column",
                  "justifyContent": "flex-start",
                  "width": "35%",
                }
              }
            >
              <View
                style={
                  {
                    "display": "flex",
                    "flexDirection": "row",
                    "justifyContent": "flex-start",
                  }
                }
              >
                <Text
                  style={
                    {
                      "color": "#c3c3c3",
                      "fontSize": 18,
                      "fontWeight": "600",
                      "marginRight": 5,
                      "marginTop": 17,
                      "opacity": 1,
                    }
                  }
                >
                  $
                </Text>
                <View
                  accessibilityLabel="text translated"
                  accessible={true}
                  style={
                    {
                      "borderColor": "#c3c3c3",
                      "borderRadius": 5,
                      "borderWidth": 1,
                      "flexGrow": 1,
                      "marginTop": 5,
                      "minHeight": 48,
                      "minWidth": 48,
                      "width": "55%",
                    }
                  }
                >
                  <TextInput
                    editable={true}
                    keyboardType="numeric"
                    maxLength={15}
                    onChangeText={[Function]}
                    onEndEditing={[Function]}
                    placeholder="#.##"
                    placeholderTextColor="#888888"
                    style={
                      {
                        "backgroundColor": "transparent",
                        "color": "#c3c3c3",
                        "fontSize": 16,
                        "fontWeight": "600",
                        "marginLeft": 5,
                        "minHeight": 48,
                        "minWidth": 48,
                      }
                    }
                    value="50.22"
                  />
                </View>
              </View>
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "column",
                  }
                }
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                    }
                  }
                >
                  <Text
                    style={
                      {
                        "color": "#c3c3c3",
                        "fontSize": 12.5,
                        "fontWeight": "600",
                        "marginTop": 11,
                        "opacity": 1,
                      }
                    }
                  >
                    text translated
                  </Text>
                  <View
                    style={
                      {
                        "alignItems": "baseline",
                        "flexDirection": "row",
                      }
                    }
                  >
                    <View
                      accessibilityState={
                        {
                          "disabled": true,
                        }
                      }
                      accessible={true}
                      collapsable={false}
                      focusable={true}
                      onClick={[Function]}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        {
                          "opacity": 1,
                        }
                      }
                    >
                      <View
                        style={
                          {
                            "alignItems": "baseline",
                            "flexDirection": "row",
                          }
                        }
                      >
                        <Text
                          style={
                            {
                              "color": "#ffffff",
                              "fontSize": 12.5,
                              "marginTop": 11,
                            }
                          }
                        >
                          $
                        </Text>
                        <Text
                          style={
                            {
                              "color": "#ffffff",
                              "fontSize": 12.5,
                              "fontWeight": "700",
                              "marginTop": 11,
                            }
                          }
                        >
                           0.00
                        </Text>
                      </View>
                    </View>
                  </View>
                </View>
                <View
                  style={
                    {
                      "marginLeft": 5,
                    }
                  }
                >
                  <View
                    accessibilityState={
                      {
                        "disabled": false,
                      }
                    }
                    accessible={true}
                    collapsable={false}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      {
                        "opacity": 1,
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "alignItems": "center",
                          "backgroundColor": "#011401",
                          "borderRadius": 10,
                          "flexDirection": "row",
                          "justifyContent": "center",
                          "margin": 0,
                          "minHeight": 40,
                          "minWidth": 40,
                          "padding": 5,
                        }
                      }
                    >
                      <
                        color="#18bd18"
                        icon={
                          {
                            "icon": [
                              512,
                              512,
                              [
                                128472,
                                "refresh",
                                "sync",
                              ],
                              "f021",
                              "M105.1 202.6c7.7-21.8 20.2-42.3 37.8-59.8c62.5-62.5 163.8-62.5 226.3 0L386.3 160H352c-17.7 0-32 14.3-32 32s14.3 32 32 32H463.5c0 0 0 0 0 0h.4c17.7 0 32-14.3 32-32V80c0-17.7-14.3-32-32-32s-32 14.3-32 32v35.2L414.4 97.6c-87.5-87.5-229.3-87.5-316.8 0C73.2 122 55.6 150.7 44.8 181.4c-5.9 16.7 2.9 34.9 19.5 40.8s34.9-2.9 40.8-19.5zM39 289.3c-5 1.5-9.8 4.2-13.7 8.2c-4 4-6.7 8.8-8.1 14c-.3 1.2-.6 2.5-.8 3.8c-.3 1.7-.4 3.4-.4 5.1V432c0 17.7 14.3 32 32 32s32-14.3 32-32V396.9l17.6 17.5 0 0c87.5 87.4 229.3 87.4 316.7 0c24.4-24.4 42.1-53.1 52.9-83.7c5.9-16.7-2.9-34.9-19.5-40.8s-34.9 2.9-40.8 19.5c-7.7 21.8-20.2 42.3-37.8 59.8c-62.5 62.5-163.8 62.5-226.3 0l-.1-.1L125.6 352H160c17.7 0 32-14.3 32-32s-14.3-32-32-32H48.4c-1.6 0-3.2 .1-4.8 .3s-3.1 .5-4.6 1z",
                            ],
                            "iconName": "arrows-rotate",
                            "prefix": "fas",
                          }
                        }
                        size={20}
                      />
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "flexGrow": 1,
              "justifyContent": "center",
              "marginVertical": 5,
            }
          }
        >
          <View
            accessibilityLabel="title text translated"
            accessibilityState={
              {
                "disabled": true,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#5a8c5a",
                "borderColor": "#5a8c5a",
                "borderRadius": 10,
                "borderWidth": 2,
                "justifyContent": "center",
                "maxWidth": "90%",
                "minHeight": 48,
                "minWidth": "30%",
                "opacity": 1,
                "padding": 0,
                "paddingLeft": 20,
                "paddingRight": 20,
              }
            }
            testID="send.button"
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "display": "flex",
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "margin": 0,
                  "minHeight": 48,
                  "minWidth": 48,
                  "padding": 0,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#011401",
                    "fontSize": 16,
                    "fontWeight": "bold",
                    "textAlign": "center",
                    "textTransform": "uppercase",
                  }
                }
              >
                text translated
              </Text>
            </View>
          </View>
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#011401",
                "borderColor": "#18bd18",
                "borderRadius": 10,
                "borderWidth": 2,
                "justifyContent": "center",
                "marginLeft": 10,
                "maxWidth": "90%",
                "minHeight": 48,
                "minWidth": "30%",
                "opacity": 1,
                "padding": 0,
                "paddingLeft": 20,
                "paddingRight": 20,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "display": "flex",
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "margin": 0,
                  "minHeight": 48,
                  "minWidth": 48,
                  "padding": 0,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#18bd18",
                    "fontSize": 16,
                    "fontWeight": "bold",
                    "textAlign": "center",
                    "textTransform": "uppercase",
                  }
                }
              >
                text translated
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
